# VoiceMesh

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.peerdb.yml  docker-compose.yml  pyproject.toml
apps/: __init__.py
docs/: architecture.md  backpressure.md  barge-in.md  billing-finalization.md  billing.md  clickhouse-cloud.md  demo.md  demo_script.md  durable-action-tools.md  events.md  failure_modes.md  kafka_vs_temporal.md  otel_tracing.md  peerdb-clickhouse-cdc.md  postgres_reliability.md  provider_abstractions.md  runtime_boundaries.md  scaling.md  temporal-workflows.md  vad-and-endpointing.md  webhook-delivery.md
scripts/: clickhouse_cdc_bootstrap.py  clickhouse_cloud_bootstrap.py  clickhouse_cloud_check.py  create_topics.py  demo_barge_in_backchannel.py  demo_barge_in_confirmed.py  demo_barge_in_noise_rejected.py  demo_billing_cdc.py  demo_billing_late_tts.py  demo_clickhouse_cloud.py  demo_db_down.sh  demo_duplicate_events.py  demo_durable_action_cancel.py  demo_full_call_refund_cancel_trace.py  demo_noise_vad.py  demo_normal_call.py  demo_tts_backpressure.py  kill_worker_demo.sh  peerdb_postgres_setup.py  peerdb_render_flow_sql.py  peerdb_status.py  reset_demo_state.sh  smoke_live_pipeline.py
tests/: test_agent_llm_context.py  test_audio.py  test_backpressure.py  test_barge_in.py  test_billing_cdc_contracts.py  test_billing_workflow.py  test_clickhouse_cloud_integration.py  test_clickhouse_config.py  test_clickhouse_normalizer.py  test_clickhouse_writer.py  test_durable_action_workflow.py  test_event_schema.py  (+10 more)
(+121 files in other folders)
