[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voicemesh"
version = "0.1.0"
description = "Vapi-inspired real-time voice pipeline reliability lab"
requires-python = ">=3.11"
dependencies = [
  "aiokafka>=0.12.0,<1",
  "asyncpg>=0.30.0,<1",
  "fastapi>=0.115.0,<1",
  "httpx>=0.28.0,<1",
  "openai>=1.68.0,<3",
  "opentelemetry-api>=1.31.0,<2",
  "opentelemetry-exporter-otlp>=1.31.0,<2",
  "opentelemetry-instrumentation-fastapi>=0.52b0,<1",
  "opentelemetry-sdk>=1.31.0,<2",
  "prometheus-client>=0.21.0,<1",
  "pydantic>=2.10.0,<3",
  "pydantic-settings>=2.8.0,<3",
  "python-json-logger>=3.2.0,<4",
  "temporalio>=1.10.0,<2",
  "uvicorn[standard]>=0.34.0,<1",
  "websockets>=15.0,<17",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15.0,<2",
  "pytest>=8.3.0,<9",
  "pytest-asyncio>=0.25.0,<1",
  "ruff>=0.11.0,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["apps"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
